--- a/1st.css
+++ b/1st.css
@@ -9,10 +9,12 @@
 
 body, html {
     margin: auto;
+	max-height: 100%;
     max-width: 100%;
     animation: fadeInAnimation ease 1.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+	overflow: hidden;
 }
 
 .background {
