--- a/1st.css
+++ b/1st.css
@@ -30,7 +30,9 @@ body, html {
     align-items: center;
     justify-content: center;
     position: absolute;
-    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 5%;
 }
 
@@ -48,6 +50,7 @@ body, html {
     font-size: 10px;
     background-color: white;
     margin-top: -25px;
+padding: 10px 10px 10px 10px
 }
 
 *,*:after,*:before{
