--- a/1st.css
+++ b/1st.css
@@ -50,7 +50,10 @@ body, html {
     font-size: 10px;
     background-color: white;
     margin-top: -25px;
-padding: 10px 10px 10px 10px
+padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px
 }
 
 *,*:after,*:before{
