--- a/1st.css
+++ b/1st.css
@@ -27,9 +27,8 @@ body, html {
 
 .container {
     align-items: center;
-    justify-content: center;
     position: absolute;
-    top: 30%;
+    top: 20%;
     left: 37%;
     transform: translate(-30%, -30%);
     border-radius: 5%;
@@ -43,16 +42,20 @@ body, html {
 }
 
 .message {
+  align-items: center;
+    position: absolute;
+    width: 250px;
+    border-radius: 2%;
     font-family: Jost, sans-serif;
     text-align: justify;
     line-height: 1.2;
     font-size: 10px;
     background-color: white;
     margin-top: -15px;
-    padding-top: 5px;
+    padding-top: 1px;
   padding-right: 20px;
-  padding-bottom: 5px;
-  padding-left: 20px
+  padding-bottom: 1px;
+  padding-left: 10px
 }
 
 *,*:after,*:before{
